# Janus

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
.cache/clangd/index/: janus.cpp.47FBFE6C2C954653.idx  janus.hpp.F7301F9962871779.idx  janus_tests.cpp.B5A11F27A0E7AE19.idx
cmake/: janus_libConfig.cmake.in
include/: janus.hpp
src/: janus.cpp
tests/: janus_tests.cpp
